Fixed quotes being too big

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -77,7 +77,8 @@ footer {
     background-color: rgb(255, 228, 196);
     border: 5px solid black;
     width: 600px;
-    height: 600px;
+
+    min-height: 600px;
     margin-top: 1.2rem;
 
     display: grid;
